compiler/rustc_mlir/mlir-wrapper/MLIRWrapper.h


typedef enum {
    MLIRRustResult_Success = 0,
    MLIRRustResult_Failure = 1
} MLIRRustResult;
typedef struct MLIROpaqueContext *MLIRContextRef;
typedef struct MLIROpaqueLocation *MLIRLocationRef;
typedef struct MLIROpaqueOperation *MLIROperationRef;
typedef struct MLIROpaqueBlock *MLIRBlockRef;
typedef struct MLIROpaqueRegion *MLIRRegionRef;
typedef struct MLIROpaqueType *MLIRTypeRef;
typedef struct MLIROpaqueAttribute *MLIRAttributeRef;
typedef struct MLIROpaqueValue *MLIRValueRef;
typedef struct MLIROpaqueOpBuilder *MLIROpBuilderRef;
typedef struct MLIROpaqueDialectRegistry *MLIRDialectRegistryRef;
typedef struct {
    const char *data;
    size_t length;
} MLIRStringRef;
MLIRBlockRef mlirRustBlockCreate(size_t nArgs, MLIRTypeRef const *argTypes,
                                 MLIRLocationRef const *argLocs);
void mlirRustBlockDestroy(MLIRBlockRef block);
size_t mlirRustBlockGetNumArguments(MLIRBlockRef block);
MLIRValueRef mlirRustBlockGetArgument(MLIRBlockRef block, size_t pos);
MLIRValueRef mlirRustBlockAddArgument(MLIRBlockRef block, MLIRTypeRef type,
                                      MLIRLocationRef loc);
MLIROperationRef mlirRustBlockGetFirstOperation(MLIRBlockRef block);
MLIROperationRef mlirRustBlockGetTerminator(MLIRBlockRef block);
void mlirRustBlockAppendOperation(MLIRBlockRef block, MLIROperationRef op);
void mlirRustBlockInsertOwnedOperationBefore(MLIRBlockRef block,
                                             MLIROperationRef ref,
                                             MLIROperationRef op);
MLIRRegionRef mlirRustRegionCreate(void);
void mlirRustRegionDestroy(MLIRRegionRef region);
size_t mlirRustRegionGetNumBlocks(MLIRRegionRef region);
MLIRBlockRef mlirRustRegionGetFirstBlock(MLIRRegionRef region);
void mlirRustRegionAppendBlock(MLIRRegionRef region, MLIRBlockRef block);
void mlirRustRegionInsertOwnedBlockBefore(MLIRRegionRef region,
                                          MLIRBlockRef ref,
                                          MLIRBlockRef block);
MLIRTypeRef mlirRustValueGetType(MLIRValueRef value);
int mlirRustValueIsBlockArgument(MLIRValueRef value);
int mlirRustValueIsOpResult(MLIRValueRef value);
char *mlirRustValuePrint(MLIRValueRef value);
void mlirRustStringDestroy(char *str);