compiler/rustc_mlir/mlir-wrapper/TritonWrapper.h


MLIRRustResult tritonRustInitDialects(MLIRContextRef ctx);
MLIRRustResult tritonRustRegisterTritonDialect(MLIRDialectRegistryRef registry);
MLIRRustResult tritonRustRegisterTritonGPUDialect(MLIRDialectRegistryRef registry);
int tritonRustIsAvailable(void);
MLIRTypeRef tritonRustPointerTypeGet(MLIRTypeRef pointeeType, int addressSpace);
int tritonRustTypeIsPointer(MLIRTypeRef type);
MLIRTypeRef tritonRustPointerTypeGetPointeeType(MLIRTypeRef type);
int tritonRustPointerTypeGetAddressSpace(MLIRTypeRef type);
MLIRTypeRef tritonRustRankedTensorTypeGet(size_t rank, const int64_t *shape,
                                          MLIRTypeRef elementType,
                                          MLIRAttributeRef encoding);
size_t tritonRustRankedTensorTypeGetRank(MLIRTypeRef type);
int64_t tritonRustRankedTensorTypeGetDimSize(MLIRTypeRef type, size_t dim);
MLIRTypeRef tritonRustRankedTensorTypeGetElementType(MLIRTypeRef type);
MLIRAttributeRef tritonRustRankedTensorTypeGetEncoding(MLIRTypeRef type);
MLIRAttributeRef tritonRustBlockedEncodingAttrGet(
    MLIRContextRef ctx,
    size_t rank,
    const unsigned *sizePerThread,
    const unsigned *threadsPerWarp,
    const unsigned *warpsPerCTA,
    const unsigned *order,
    const unsigned *CTAsPerCGA,
    const unsigned *CTASplitNum,
    const unsigned *CTAOrder);
int tritonRustAttrIsBlockedEncoding(MLIRAttributeRef attr);
MLIRAttributeRef tritonRustSharedEncodingAttrGet(
    MLIRContextRef ctx,
    unsigned vec,
    unsigned perPhase,
    unsigned maxPhase,
    size_t orderLen,
    const unsigned *order,
    int hasLeadingOffset);
int tritonRustAttrIsSharedEncoding(MLIRAttributeRef attr);
MLIRAttributeRef tritonRustSliceEncodingAttrGet(MLIRContextRef ctx,
                                                unsigned dim,
                                                MLIRAttributeRef parent);
int tritonRustAttrIsSliceEncoding(MLIRAttributeRef attr);
MLIRAttributeRef tritonRustNvidiaMmaEncodingAttrGet(
    MLIRContextRef ctx,
    unsigned versionMajor,
    unsigned versionMinor,
    size_t warpsPerCTALen,
    const unsigned *warpsPerCTA,
    size_t CTAsPerCGALen,
    const unsigned *CTAsPerCGA,
    size_t CTASplitNumLen,
    const unsigned *CTASplitNum,
    size_t CTAOrderLen,
    const unsigned *CTAOrder,
    size_t instrShapeLen,
    const unsigned *instrShape);
MLIRAttributeRef tritonRustAMDMfmaEncodingAttrGet(
    MLIRContextRef ctx,
    unsigned versionMajor,
    unsigned versionMinor,
    size_t warpsPerCTALen,
    const unsigned *warpsPerCTA,
    unsigned mDim,
    unsigned nDim,
    int isTransposed,
    size_t CTAsPerCGALen,
    const unsigned *CTAsPerCGA,
    size_t CTASplitNumLen,
    const unsigned *CTASplitNum,
    size_t CTAOrderLen,
    const unsigned *CTAOrder);
MLIRAttributeRef tritonRustProgramIdAttrGet(MLIRContextRef ctx, int axis);
MLIRAttributeRef tritonRustCacheModifierAttrGet(MLIRContextRef ctx, int modifier);
MLIRAttributeRef tritonRustEvictionPolicyAttrGet(MLIRContextRef ctx, int policy);
MLIRAttributeRef tritonRustPaddingOptionAttrGet(MLIRContextRef ctx, int option);
MLIRAttributeRef tritonRustPropagateNanAttrGet(MLIRContextRef ctx, int option);
MLIRAttributeRef tritonRustRMWOpAttrGet(MLIRContextRef ctx, int op);
MLIROperationRef tritonRustMakeRangeOp(MLIROpBuilderRef builder,
                                       MLIRLocationRef loc,
                                       int32_t start,
                                       int32_t end);
MLIROperationRef tritonRustSplatOp(MLIROpBuilderRef builder,
                                   MLIRLocationRef loc,
                                   MLIRValueRef src,
                                   MLIRTypeRef resultType);
MLIROperationRef tritonRustBroadcastOp(MLIROpBuilderRef builder,
                                       MLIRLocationRef loc,
                                       MLIRValueRef src,
                                       MLIRTypeRef resultType);
MLIROperationRef tritonRustExpandDimsOp(MLIROpBuilderRef builder,
                                        MLIRLocationRef loc,
                                        MLIRValueRef src,
                                        int axis);
MLIROperationRef tritonRustAddPtrOp(MLIROpBuilderRef builder,
                                    MLIRLocationRef loc,
                                    MLIRValueRef ptr,
                                    MLIRValueRef offset);
MLIROperationRef tritonRustLoadOp(MLIROpBuilderRef builder,
                                  MLIRLocationRef loc,
                                  MLIRValueRef ptr,
                                  MLIRAttributeRef cache,
                                  MLIRAttributeRef evict,
                                  int isVolatile);
MLIROperationRef tritonRustStoreOp(MLIROpBuilderRef builder,
                                   MLIRLocationRef loc,
                                   MLIRValueRef ptr,
                                   MLIRValueRef value,
                                   MLIRAttributeRef cache);
MLIROperationRef tritonRustDotOp(MLIROpBuilderRef builder,
                                 MLIRLocationRef loc,
                                 MLIRValueRef a,
                                 MLIRValueRef b,
                                 MLIRValueRef c,
                                 int allowTF32,
                                 int maxNumImpreciseAcc);
MLIROperationRef tritonRustReduceOp(MLIROpBuilderRef builder,
                                    MLIRLocationRef loc,
                                    MLIRValueRef operand,
                                    int axis);
MLIROperationRef tritonRustGetProgramIdOp(MLIROpBuilderRef builder,
                                          MLIRLocationRef loc,
                                          int axis);
MLIROperationRef tritonRustGetNumProgramsOp(MLIROpBuilderRef builder,
                                            MLIRLocationRef loc,
                                            int axis);
MLIROperationRef tritonRustFuncOp(MLIROpBuilderRef builder,
                                  MLIRLocationRef loc,
                                  MLIRStringRef name,
                                  size_t numInputs,
                                  MLIRTypeRef const *inputTypes,
                                  size_t numResults,
                                  MLIRTypeRef const *resultTypes);
MLIROperationRef tritonRustReturnOp(MLIROpBuilderRef builder,
                                    MLIRLocationRef loc,
                                    size_t numValues,
                                    MLIRValueRef const *values);
MLIROperationRef tritonRustConvertLayoutOp(MLIROpBuilderRef builder,
                                           MLIRLocationRef loc,
                                           MLIRValueRef src,
                                           MLIRTypeRef dstType);
MLIROperationRef tritonRustAllocTensorOp(MLIROpBuilderRef builder,
                                         MLIRLocationRef loc,
                                         MLIRTypeRef tensorType);
MLIROperationRef tritonRustInsertSliceAsyncOp(MLIROpBuilderRef builder,
                                              MLIRLocationRef loc,
                                              MLIRValueRef src,
                                              MLIRValueRef dst,
                                              MLIRValueRef index,
                                              MLIRAttributeRef cache,
                                              MLIRAttributeRef evict,
                                              int isVolatile);
MLIROperationRef tritonRustAsyncWaitOp(MLIROpBuilderRef builder,
                                       MLIRLocationRef loc,
                                       int num);
const char *tritonRustGetVersion(void);
unsigned tritonRustGetNumWarps(MLIRStringRef target);
unsigned tritonRustGetThreadsPerWarp(MLIRStringRef target);