compiler/rustc_mlir/src/ffi.rs


    pub fn mlirRustBlockCreate(
        n_args: usize,
        arg_types: *const MLIRTypeRef,
        arg_locs: *const MLIRLocationRef,
    ) -> MLIRBlockRef;
    pub fn mlirRustBlockDestroy(block: MLIRBlockRef);
    pub fn mlirRustBlockGetNumArguments(block: MLIRBlockRef) -> usize;
    pub fn mlirRustBlockGetArgument(block: MLIRBlockRef, pos: usize) -> MLIRValueRef;
    pub fn mlirRustBlockAddArgument(
        block: MLIRBlockRef,
        ty: MLIRTypeRef,
        loc: MLIRLocationRef,
    ) -> MLIRValueRef;
    pub fn mlirRustBlockGetFirstOperation(block: MLIRBlockRef) -> MLIROperationRef;
    pub fn mlirRustBlockGetTerminator(block: MLIRBlockRef) -> MLIROperationRef;
    pub fn mlirRustBlockAppendOperation(block: MLIRBlockRef, op: MLIROperationRef);
    pub fn mlirRustBlockInsertOwnedOperationBefore(
        block: MLIRBlockRef,
        reference: MLIROperationRef,
        op: MLIROperationRef,
    );

    //=========================================================================
    // Region operations
    //=========================================================================

    pub fn mlirRustRegionCreate() -> MLIRRegionRef;
    pub fn mlirRustRegionDestroy(region: MLIRRegionRef);
    pub fn mlirRustRegionGetNumBlocks(region: MLIRRegionRef) -> usize;
    pub fn mlirRustRegionGetFirstBlock(region: MLIRRegionRef) -> MLIRBlockRef;
    pub fn mlirRustRegionAppendBlock(region: MLIRRegionRef, block: MLIRBlockRef);
    pub fn mlirRustRegionInsertOwnedBlockBefore(
        region: MLIRRegionRef,
        reference: MLIRBlockRef,
        block: MLIRBlockRef,
    );

    //=========================================================================
    // Value operations
    //=========================================================================

    pub fn mlirRustValueGetType(value: MLIRValueRef) -> MLIRTypeRef;
    pub fn mlirRustValueIsBlockArgument(value: MLIRValueRef) -> c_int;
    pub fn mlirRustValueIsOpResult(value: MLIRValueRef) -> c_int;
    pub fn mlirRustValuePrint(value: MLIRValueRef) -> *mut c_char;

    //=========================================================================
    // Memory management
    //=========================================================================

    pub fn mlirRustStringDestroy(str: *mut c_char);
}

// Triton-specific FFI declarations
#[link(name = "mlir-wrapper", kind = "static")]
extern "C" {
    //=========================================================================
    // Dialect registration
    //=========================================================================

    pub fn tritonRustInitDialects(ctx: MLIRContextRef) -> MLIRRustResult;
    pub fn tritonRustRegisterTritonDialect(registry: MLIRDialectRegistryRef) -> MLIRRustResult;
    pub fn tritonRustRegisterTritonGPUDialect(registry: MLIRDialectRegistryRef) -> MLIRRustResult;
    pub fn tritonRustIsAvailable() -> c_int;

    //=========================================================================
    // Triton Pointer Type
    //=========================================================================

    pub fn tritonRustPointerTypeGet(pointee_type: MLIRTypeRef, address_space: c_int)
        -> MLIRTypeRef;
    pub fn tritonRustTypeIsPointer(ty: MLIRTypeRef) -> c_int;
    pub fn tritonRustPointerTypeGetPointeeType(ty: MLIRTypeRef) -> MLIRTypeRef;
    pub fn tritonRustPointerTypeGetAddressSpace(ty: MLIRTypeRef) -> c_int;

    //=========================================================================
    // Triton Tensor Type
    //=========================================================================

    pub fn tritonRustRankedTensorTypeGet(
        rank: usize,
        shape: *const i64,
        element_type: MLIRTypeRef,
        encoding: MLIRAttributeRef,
    ) -> MLIRTypeRef;
    pub fn tritonRustRankedTensorTypeGetRank(ty: MLIRTypeRef) -> usize;
    pub fn tritonRustRankedTensorTypeGetDimSize(ty: MLIRTypeRef, dim: usize) -> i64;
    pub fn tritonRustRankedTensorTypeGetElementType(ty: MLIRTypeRef) -> MLIRTypeRef;
    pub fn tritonRustRankedTensorTypeGetEncoding(ty: MLIRTypeRef) -> MLIRAttributeRef;

    //=========================================================================
    // Triton GPU Encodings
    //=========================================================================

    pub fn tritonRustBlockedEncodingAttrGet(
        ctx: MLIRContextRef,
        rank: usize,
        size_per_thread: *const c_uint,
        threads_per_warp: *const c_uint,
        warps_per_cta: *const c_uint,
        order: *const c_uint,
        ctas_per_cga: *const c_uint,
        cta_split_num: *const c_uint,
        cta_order: *const c_uint,
    ) -> MLIRAttributeRef;
    pub fn tritonRustAttrIsBlockedEncoding(attr: MLIRAttributeRef) -> c_int;

    pub fn tritonRustSharedEncodingAttrGet(
        ctx: MLIRContextRef,
        vec: c_uint,
        per_phase: c_uint,
        max_phase: c_uint,
        order_len: usize,
        order: *const c_uint,
        has_leading_offset: c_int,
    ) -> MLIRAttributeRef;
    pub fn tritonRustAttrIsSharedEncoding(attr: MLIRAttributeRef) -> c_int;

    pub fn tritonRustSliceEncodingAttrGet(
        ctx: MLIRContextRef,
        dim: c_uint,
        parent: MLIRAttributeRef,
    ) -> MLIRAttributeRef;
    pub fn tritonRustAttrIsSliceEncoding(attr: MLIRAttributeRef) -> c_int;

    pub fn tritonRustNvidiaMmaEncodingAttrGet(
        ctx: MLIRContextRef,
        version_major: c_uint,
        version_minor: c_uint,
        warps_per_cta_len: usize,
        warps_per_cta: *const c_uint,
        ctas_per_cga_len: usize,
        ctas_per_cga: *const c_uint,
        cta_split_num_len: usize,
        cta_split_num: *const c_uint,
        cta_order_len: usize,
        cta_order: *const c_uint,
        instr_shape_len: usize,
        instr_shape: *const c_uint,
    ) -> MLIRAttributeRef;

    pub fn tritonRustAMDMfmaEncodingAttrGet(
        ctx: MLIRContextRef,
        version_major: c_uint,
        version_minor: c_uint,
        warps_per_cta_len: usize,
        warps_per_cta: *const c_uint,
        m_dim: c_uint,
        n_dim: c_uint,
        is_transposed: c_int,
        ctas_per_cga_len: usize,
        ctas_per_cga: *const c_uint,
        cta_split_num_len: usize,
        cta_split_num: *const c_uint,
        cta_order_len: usize,
        cta_order: *const c_uint,
    ) -> MLIRAttributeRef;

    //=========================================================================
    // Triton Attributes
    //=========================================================================

    pub fn tritonRustProgramIdAttrGet(ctx: MLIRContextRef, axis: c_int) -> MLIRAttributeRef;
    pub fn tritonRustCacheModifierAttrGet(ctx: MLIRContextRef, modifier: c_int)
        -> MLIRAttributeRef;
    pub fn tritonRustEvictionPolicyAttrGet(ctx: MLIRContextRef, policy: c_int)
        -> MLIRAttributeRef;
    pub fn tritonRustPaddingOptionAttrGet(ctx: MLIRContextRef, option: c_int) -> MLIRAttributeRef;
    pub fn tritonRustPropagateNanAttrGet(ctx: MLIRContextRef, option: c_int) -> MLIRAttributeRef;
    pub fn tritonRustRMWOpAttrGet(ctx: MLIRContextRef, op: c_int) -> MLIRAttributeRef;

    //=========================================================================
    // Triton Operation Helpers
    //=========================================================================

    pub fn tritonRustMakeRangeOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        start: i32,
        end: i32,
    ) -> MLIROperationRef;

    pub fn tritonRustSplatOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        src: MLIRValueRef,
        result_type: MLIRTypeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustBroadcastOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        src: MLIRValueRef,
        result_type: MLIRTypeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustExpandDimsOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        src: MLIRValueRef,
        axis: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustAddPtrOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        ptr: MLIRValueRef,
        offset: MLIRValueRef,
    ) -> MLIROperationRef;

    pub fn tritonRustLoadOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        ptr: MLIRValueRef,
        cache: MLIRAttributeRef,
        evict: MLIRAttributeRef,
        is_volatile: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustStoreOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        ptr: MLIRValueRef,
        value: MLIRValueRef,
        cache: MLIRAttributeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustDotOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        a: MLIRValueRef,
        b: MLIRValueRef,
        c: MLIRValueRef,
        allow_tf32: c_int,
        max_num_imprecise_acc: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustReduceOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        operand: MLIRValueRef,
        axis: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustGetProgramIdOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        axis: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustGetNumProgramsOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        axis: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustFuncOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        name: MLIRStringRef,
        num_inputs: usize,
        input_types: *const MLIRTypeRef,
        num_results: usize,
        result_types: *const MLIRTypeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustReturnOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        num_values: usize,
        values: *const MLIRValueRef,
    ) -> MLIROperationRef;

    //=========================================================================
    // Triton GPU Operation Helpers
    //=========================================================================

    pub fn tritonRustConvertLayoutOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        src: MLIRValueRef,
        dst_type: MLIRTypeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustAllocTensorOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        tensor_type: MLIRTypeRef,
    ) -> MLIROperationRef;

    pub fn tritonRustInsertSliceAsyncOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        src: MLIRValueRef,
        dst: MLIRValueRef,
        index: MLIRValueRef,
        cache: MLIRAttributeRef,
        evict: MLIRAttributeRef,
        is_volatile: c_int,
    ) -> MLIROperationRef;

    pub fn tritonRustAsyncWaitOp(
        builder: MLIROpBuilderRef,
        loc: MLIRLocationRef,
        num: c_int,
    ) -> MLIROperationRef;

    //=========================================================================
    // Utility functions
    //=========================================================================

    pub fn tritonRustGetVersion() -> *const c_char;
    pub fn tritonRustGetNumWarps(target: MLIRStringRef) -> c_uint;
    pub fn tritonRustGetThreadsPerWarp(target: MLIRStringRef) -> c_uint;
}

/// Helper to convert a C string to Rust String, freeing the C string
pub unsafe fn c_str_to_string(ptr: *mut c_char) -> String {
    if ptr.is_null() {
        return String::new();
    }
    let c_str = std::ffi::CStr::from_ptr(ptr);
    let result = c_str.to_string_lossy().into_owned();
    mlirRustStringDestroy(ptr);
    result
}
